[package]
name = "jwalk"
version = "0.5.2-alpha.0"
authors = ["Jesse Grosjean <jesse@hogbaysoftware.com>"]
description = "Filesystem walk performed in parallel with streamed and sorted results."
documentation = "https://docs.rs/jwalk/"
homepage = "https://github.com/jessegrosjean/jwalk"
repository = "https://github.com/jessegrosjean/jwalk"
readme = "README.md"
keywords = ["directory", "recursive", "walk", "iterator", "parallel"]
categories = ["filesystem", "concurrency"]
license = "MIT"
edition = "2018"

[badges]
travis-ci = { repository = "jessegrosjean/jwalk" }

[dependencies]
rayon = "1.3"
crossbeam = "0.7"

[dev-dependencies]
criterion = "0.3"
fs_extra = "1.1"
walkdir = "2.3"
ignore = "0.4"
tempfile = "3.1"
num_cpus = "1.12"
lazy_static = "1.4"

[[bench]]
name = "walk_benchmark"
harness = false
